--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -16,92 +16,140 @@
 
 <body>
 
-
-Services
-Product
-Vision
-Features
-About
-Contact
-
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-
-
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
-Services
-
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+<nav>
+  <a href='services.html'>Services</a>
+  <a href='#'>Product</a>
+  <a href='#'>Vision</a>
+  <a href='#'>Features</a>
+  <a href='#'>About</a>
+  <a href='#'>Contact</a>
+  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+</nav>
 
 
-Digital Design
+<div class="servicemidimg">
+  <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+</div>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+<div class="serviceheader">
+  <h1 class="sheader"> Services</h1>
+  <p class='infop'>
+    Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+  </p>
+</div>
+<hr>
 
-Learn More
+<div class="contentbox"> 
+
+  <div class="box">
+    <h2 class="sheader">Digital Design</h2>
+    <p class="infop">
+      Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+    </p>
+    
+    <span class="button2">Learn More </span>
+  </div>
+  
+  
+  
+  <div class="box">
+    <h2 class="sheader">UX / UI </h2>
+  
+   <p class="infop">
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+   </p> 
+    
+     <span class="button2">Learn More </span>
+  </div>
+  
+  
+  
+  <div class="box">
+    <h2 class="sheader">Digital Marketing </h2>
+  
+  <p class="infop">
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+   <span class="button2">Learn More </span>
+  </div>
+  
+  
+  <div class="box">
+    <h2 class="sheader">Web Development</h2>
+  
+  <p class="infop">
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.
+  </p>
+
+  <span class="button2"> Learn More</span>
+  </div>
+  
+  
+  <div class="box">
+    <h2 class="sheader"> iOS Development</h2>
+  
+  <p class="infop">
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <span class="button2">Learn More </span>
+  </div>
+  
+  
+  <div class="box">
+    <h2 class="sheader">Android Development </h2>
+  
+  <p class="infop"> 
+    Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+  eleifend. Mauris euismod facilisis iaculis.
+  </p>
+  
+  <span class="button2">Learn More </span>
+  </div>
+  
+  
+  
+</div>
+
+
+<h2 class="sheader">Some Facts About Our Services</h2>
+
+<div class="facts">
+
+  <p class='infop'>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+    eleifend. Mauris euismod facilisis iaculis.
+   </p>
+  
+   <ul class="list">
+    <li>Awesome thing</li>
+    <li>Amazing thing</li>
+    <li>Cool thing</li>
+    <li>Great thing</li>
+   </ul>
+ 
+
+    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+
+</div>
 
 
 
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
+<span class='copy'>Copyright Great Idea! 2018</span>
 
 </body>
 
 </html>
+
+
+
+
+
+  
+  
+  
